start styling/addressing audit issues

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html>
+<html lang="en">
     <head>
         <title>Google Books Search Engine</title>
         <!-- fetch polyfill if your browser doesn't support fetch -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script> -->
         <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="search-area">
